Added unit tests for most services. Tweaked some html files. GOD user is now created when the application starts and there isn't one already. Refactored some the service methods to reuse a private method.

--- a/src/main/resources/static/assets/styles/style.css
+++ b/src/main/resources/static/assets/styles/style.css
@@ -29,6 +29,11 @@ a[href], input[type='submit'], input[type='image'], label[for], select, button, 
     color: #5cb85c;
 }
 
+.nav-search-btn:hover {
+    background-color: #5cb85c;
+    color: #ffffff;
+}
+
 .post-image-small {
     max-width: 4rem;
     min-width: 3rem;
