--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -11,6 +11,8 @@
 <th:block th:fragment="style">
     <link rel="stylesheet" type="text/css" href="/assets/styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/styles/noty.css">
+    <link rel="stylesheet" type="text/css" href="/assets/styles/bootstrap-v4.scss">
 </th:block>
 
 <th:block th:fragment="scripts">
@@ -18,4 +20,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="/assets/scripts/chiricker.js"></script>
+    <script src="/assets/scripts/noty.min.js"></script>
 </th:block>
