--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
 
-                <li class="nav-item mr-3">
+                <li class="nav-item mr-3" sec:authorize="isAuthenticated()">
                     <a class="nav-link button-c" id="notifications" href="/notifications">
                         Notifications
                     </a>
