--- a/src/main/resources/templates/users/profile/activity.html
+++ b/src/main/resources/templates/users/profile/activity.html
@@ -12,9 +12,7 @@
 
     <div class="col col-12 col-sm-12 col-md-12 col-lg-8">
 
-        <div class="mb-1 row w-100" id="alert"></div>
-
-        <div class="card border-light mb-3 w-100 row card-width">
+        <div class="card border-light mb-3 w-100 card-width">
             <div class="card-body">
 
                 <div class="row" th:object="${profile}">
@@ -34,7 +32,7 @@
             </div>
         </div>
 
-        <div class="card border-light mb-3 w-100 row card-width">
+        <div class="card border-light mb-3 w-100 card-width">
             <div class="card-body">
 
                 <ul class="nav nav-tabs" id="activityTabs">
